--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -4,12 +4,16 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="8dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="@dimen/cardview_default_elevation"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <ImageView
             android:id="@+id/productImage"
@@ -42,6 +46,7 @@
             android:layout_marginTop="8dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="With the new Playstation 5 you can play the most awesome games non-stop! Make sure to pre-order!" />
 
 
@@ -54,7 +59,7 @@
             app:layout_constraintBottom_toTopOf="@id/buyButton"
             android:textStyle="bold"
             android:textColor="#000000"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-medium"
             android:text="$599,99"
