--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -83,5 +83,19 @@
             android:text="@string/buy_it"
             />
 
+        <ImageView
+            android:id="@+id/view_wishlist_icon"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="12dp"
+            android:padding="8dp"
+            android:background="@drawable/border"
+            android:src="@drawable/ic_baseline_favorite"
+            app:layout_constraintBottom_toBottomOf="@+id/buyButton"
+            app:layout_constraintEnd_toStartOf="@id/buyButton"
+            app:layout_constraintTop_toTopOf="@id/buyButton"
+            />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
